--- a/web/product.html
+++ b/web/product.html
@@ -14,7 +14,7 @@
         </button>
       </div>
       <div class="toast-body">
-        Ga naar je <a href="/basket.html">Winkelwagen</a> om af te rekenen
+        Ga naar je <a href="/basket.html">Winkelwagen</a> 
       </div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,7 +36,7 @@
     </main>
     <footer>
       <hr>
-       <p>Het maken van deze website is een opdracht voor het vak informatica op het Emmauscollege Rotterdam.</p>
+       <p>Het maken van deze website is een opdracht voor het vak informatica op het Groen van Prinstererlyceum Rotterdam.</p>
    </footer>
     <!-- template for product info-->
         <template id="productcard">
